# supernova

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_api_suggestions.py  generate_gamepad_mappings.py
engine/: CMakeLists.txt
engine/core/: Doriax.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Log.cpp  Log.h  Scene.cpp  Scene.h  SceneSettings.h  Supernova.h  System.cpp  System.h
engine/core/action/: Action.cpp  Action.h  AlphaAction.cpp  AlphaAction.h  Animation.cpp  Animation.h  ColorAction.cpp  ColorAction.h  Ease.h  Particles.cpp  Particles.h  PositionAction.cpp  PositionAction.h  RotationAction.cpp  RotationAction.h  ScaleAction.cpp  ScaleAction.h  SpriteAnimation.cpp  SpriteAnimation.h  TimedAction.cpp  TimedAction.h
engine/core/action/keyframe/: MorphTracks.cpp  MorphTracks.h  RotateTracks.cpp  RotateTracks.h  ScaleTracks.cpp  ScaleTracks.h  TranslateTracks.cpp  TranslateTracks.h
engine/core/buffer/: Attribute.cpp  Attribute.h  Buffer.cpp  Buffer.h  ExternalBuffer.cpp  ExternalBuffer.h  IndexBuffer.cpp  IndexBuffer.h  InterleavedBuffer.cpp  InterleavedBuffer.h
engine/core/component/: ActionComponent.h  AlphaActionComponent.h  AnimationComponent.h  AudioComponent.h  Body2DComponent.h  Body3DComponent.h  BoneComponent.h  ButtonComponent.h  CameraComponent.h  ColorActionComponent.h  FogComponent.h  ImageComponent.h  InstancedMeshComponent.h  Joint2DComponent.h  Joint3DComponent.h  KeyframeTracksComponent.h  Light2DComponent.h  LightComponent.h  LinesComponent.h  MeshComponent.h  MeshPolygonComponent.h  MirrorComponent.h  ModelComponent.h  MorphTracksComponent.h  Occluder2DComponent.h  PanelComponent.h  ParticlesComponent.h  PointsComponent.h  PolygonComponent.h  PositionActionComponent.h  ProgressbarComponent.h  ReflectionProbeComponent.h  RotateTracksComponent.h  RotationActionComponent.h  ScaleActionComponent.h  ScaleTracksComponent.h  ScriptComponent.h  ScrollbarComponent.h  SkyComponent.h  SoundComponent.h  (+12 more)
engine/core/ecs/: ComponentArray.h  ComponentManager.h  Entity.h  EntityManager.h  Signature.h  SubSystem.h
engine/core/io/: Data.cpp  Data.h  File.cpp  File.h  UserSettings.cpp  UserSettings.h
engine/core/manager/: SceneManager.cpp  SceneManager.h
engine/core/math/: AABB.cpp  Interpolation.h  Matrix4.cpp  Matrix4.h  OBB.cpp  Ray.cpp  Vector3.cpp  Vector3.h
engine/core/object/: Bone.cpp  Bone.h  Camera.cpp  Camera.h  EntityHandle.cpp  EntityHandle.h  Light.cpp  Light.h  Light2D.cpp  Light2D.h  Lines.cpp  Lines.h  Mesh.cpp  Mesh.h  MeshPolygon.cpp  MeshPolygon.h  Model.cpp  Model.h  Object.cpp  Object.h  Occluder2D.cpp  Occluder2D.h  Points.cpp  Points.h  Shape.cpp  Shape.h  Sprite.cpp  Sprite.h  Terrain.cpp  Terrain.h  Tilemap.cpp  Tilemap.h
engine/core/object/audio/: Audio.cpp  Audio.h
engine/core/object/environment/: Fog.cpp  Fog.h  ReflectionProbe.cpp  ReflectionProbe.h  SkyBox.cpp  SkyBox.h
engine/core/object/physics/: Body2D.cpp  Body2D.h  Body3D.cpp  Body3D.h  CollideShapeResult3D.cpp  CollideShapeResult3D.h  Contact2D.cpp  Contact2D.h  Contact3D.cpp  Contact3D.h  Joint2D.cpp  Joint2D.h  Joint3D.cpp  Joint3D.h  Manifold2D.cpp  Manifold2D.h
engine/core/object/sound/: Sound.cpp  (+1 more)
engine/core/pool/: FontPool.cpp  FontPool.h  ModelPool.cpp  ModelPool.h  ObjModelData.h  ShaderPool.cpp  ShaderPool.h  SoundPool.cpp  SoundPool.h  TextureDataPool.cpp  TextureDataPool.h  TexturePool.cpp  TexturePool.h
engine/core/registry/: EntityRegistry.cpp  EntityRegistry.h
engine/core/render/: BufferRender.cpp  BufferRender.h  CameraRender.cpp  CameraRender.h  FramebufferRender.cpp  FramebufferRender.h  ObjectRender.cpp  ObjectRender.h  Render.h  ShaderRender.cpp  ShaderRender.h  SystemRender.cpp  SystemRender.h  TextureRender.cpp  TextureRender.h
engine/core/script/: LuaBinding.cpp  LuaBinding.h  LuaBridgeAddon.h  LuaFunction.h  LuaFunctionBase.cpp  LuaFunctionBase.h  LuaScript.cpp  LuaScript.h  ScriptBase.cpp  ScriptBase.h  ScriptProperty.cpp  ScriptProperty.h
engine/core/shader/: SBSReader.cpp  SBSReader.h  ShaderBuildTypes.h  ShaderData.cpp  ShaderData.h  ShaderDataSerializer.cpp  ShaderDataSerializer.h
engine/core/subsystem/: ActionSystem.cpp  ActionSystem.h  AudioSystem.cpp  AudioSystem.h  MeshSystem.cpp  MeshSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  UISystem.cpp  UISystem.h
engine/core/texture/: Framebuffer.cpp  Framebuffer.h  IBLEnvironment.cpp  IBLEnvironment.h  Material.h  Texture.cpp  Texture.h  TextureData.cpp  TextureData.h
engine/core/thread/: ResourceProgress.cpp  ResourceProgress.h  ThreadPoolManager.cpp  ThreadPoolManager.h
engine/core/util/: Angle.cpp  Angle.h  Base64.cpp  Base64.h  Box2DAux.h  Color.cpp  Color.h  CrashGuard.h  DefaultFont.h  FunctionSubscribe.h  JoltPhysicsAux.h  STBText.cpp  STBText.h  SpriteFrameData.h  StringUtils.cpp  StringUtils.h  ThreadUtils.h  UniqueToken.cpp  UniqueToken.h  XMLUtils.cpp  XMLUtils.h
engine/libs/sokol/: CMakeLists.txt  sokol.cpp  sokol_app.h  sokol_gfx.h
engine/platform/android/: DoriaxAndroid.cpp  DoriaxAndroid.h  NativeEngine.cpp  NativeEngine.h
engine/platform/apple/: DoriaxApple.h  DoriaxApple.mm  DoriaxGameController.h  DoriaxGameController.mm  Renderer.mm
engine/platform/emscripten/: DoriaxWeb.cpp  DoriaxWeb.h
engine/platform/glfw/: DoriaxGLFW.cpp  DoriaxGLFW.h  GamepadMappings.h
engine/platform/sokol/: DoriaxSokol.cpp  DoriaxSokol.h  main.cpp
engine/renders/sokol/: SokolBuffer.cpp  SokolBuffer.h  SokolCamera.cpp  SokolCamera.h  SokolCmdQueue.cpp  SokolCmdQueue.h  SokolFramebuffer.cpp  SokolFramebuffer.h  SokolObject.cpp  SokolObject.h  SokolShader.cpp  SokolShader.h  SokolSystem.cpp  SokolSystem.h  SokolTexture.cpp  SokolTexture.h
engine/shaders/: glsl300es.h  glsl410.h  hlsl5.h  msl21ios.h  msl21macos.h  spirv10.h
engine/tools/: doriax.py  supershader.py
engine/tools/shaderlib/: blit.frag  composite.frag  depth.frag  depth.vert  fullscreen.vert  gbuffer.frag  gbuffer.vert  lines.vert  mesh.frag  mesh.vert  points.vert  shadow2d.frag  shadow2d.vert  sky.vert  ssao.frag  ssao_blur.frag  ssr.frag  ssr_blur.frag  ui.vert
(+218 files in other folders)
